--- a/dom-box/index.html
+++ b/dom-box/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Dom in a box</title>
-<!-- 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -21,6 +21,13 @@
   <div class="box pad-5" data-code="70"><p>TAFFY LEGS</p></div>
 
 </div>
+
+  <audio id="sound1" preload="auto" src="sounds/bird.ogg"></audio>
+  <audio id="sound2" preload="auto" src="sounds/revelstoke.ogg"></audio>
+  <audio id="sound3" preload="auto" src="sounds/sure.ogg"></audio>
+  <audio id="sound4" preload="auto" src="sounds/taffy.ogg"></audio>
+  <audio id="sound5" preload="auto" src="sounds/butter.ogg"></audio>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
