--- a/dom-box/index.html
+++ b/dom-box/index.html
@@ -22,11 +22,11 @@
 
 </div>
 
-  <audio id="sound1" preload="auto" src="sounds/bird.ogg"></audio>
-  <audio id="sound2" preload="auto" src="sounds/revelstoke.ogg"></audio>
-  <audio id="sound3" preload="auto" src="sounds/sure.ogg"></audio>
-  <audio id="sound4" preload="auto" src="sounds/taffy.ogg"></audio>
-  <audio id="sound5" preload="auto" src="sounds/butter.ogg"></audio>
+  <audio id="sound1" preload="auto" src="sounds/bird.mp3"></audio>
+  <audio id="sound2" preload="auto" src="sounds/revelstoke.mp3"></audio>
+  <audio id="sound3" preload="auto" src="sounds/sure.mp3"></audio>
+  <audio id="sound4" preload="auto" src="sounds/taffy.mp3"></audio>
+  <audio id="sound5" preload="auto" src="sounds/butter.mp3"></audio>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
